Aapl 2.13 - Jan 25, 2006
========================
 -The vector and binary search table constructors that set an initial amount
  of allocation have been removed. They have been replaced with constructors
  that insert initial values, which is a more common task and is a more
  intuitive use for contructors.
 -Removed the String class. Better to use the stl string class. Aapl::String
  does not provide any real advantage over the STL version. Aapl::String has
  not been heavily tested and does not have very much functionality.
 -Removed the "tiny" versions of templates. These templates had functionality
  reduced in the interest of reducing compiled binary size. These templates
  did not find any real world use, nor were they heavily tested.
 -Removed the "simple" versions of vectors. These should be implemented as
  template specializations, not new classes. May be brought back as such in
  the future.
 -Added vinsert and vremove routines for accessing the insert and remove of
  the underlying vector of binary search tables. Previously, these were
  accessed by prefixing the insert call with the vector base class name,
  however this method is somewhat inconvenient, because it either requires all
  the template arguments to be given or an additional typedef to be made.
  Prefixing the call with the letter v is simpler.

Aapl 2.12 - May 15, 2005
========================
 -Documentation updates to trees, lists, compare classes, binary search tables
  and various other places.
 -Added iterator documentation and example.
 -Added proper includes for all examples, which now all compile.
 -Table comparisons now properly inherit the CompareT class, enabling table
  comparisons to call non-static element compare classes.
 -Removed the Deque structure. This structure was never used, incomplete and
  poorly tested. In most problems for which it is a candidate (large
  collections of objects in sequential ordering that are not required to be in